--- a/web/themes/custom/commerce_2_demo/sass/custom/_variables.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_variables.scss
@@ -38,7 +38,7 @@ $gray-lighter:           #fff;
 $f-primary: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 $f-primary-condensed: 'Open Sans Condensed', 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 $f-secondary: 'Roboto Slab', Georgia, Times, 'Times New Roman', serif;
-$f-secondary-alternate: 'Calligraffitti', cursive;
+$f-secondary-alternate: 'Love Ya Like A Sister', cursive;
 $f-body: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 $f-fontawesome: FontAwesome;
 $f-glyphicons: 'Glyphicons Halflings';
