--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
@@ -1,12 +1,15 @@
 /**
  * Homepage carousel slider.
  */
+.view-homepage-carousel {
+  background-color: #000;
+}
 .homepage-carousel-slider {
   position: relative;
   clear: both;
   margin: 0 auto 20px auto;
   padding: 0;
-  max-width: 1600px;
+  max-width: 1570px;
   overflow: hidden;
 
   // Slider.
@@ -31,52 +34,50 @@
 
     li {
       position: absolute;
-      top: 45%;
+      top: 43%;
       margin: 0;
       padding: 0;
       background: none;
       z-index: 2;
 
+      @media (max-width: $screen-xs-max) {
+        display: none;
+      }
+
       a {
         display: block;
+        width: 37px;
+        height: 70px;
         margin: 0;
         padding: 0;
-        color: #dedede;
-        font-family: $f-glyphicons;
-        font-size: 30px;
         outline: none;
-        text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.8);
+        background-size: 37px 70px;
+        opacity: 1;
 
-        &:hover {
-          color: #fff;
+        &:hover, &:focus {
+          opacity: 0.6;
         }
       }
     }
     li.flex-nav-prev {
-      left: 20px;
+      left: 40px;
 
-      a:before {
-        display: block;
-        content: "\e079";
-        margin: 0;
-        padding: 0;
+      a {
+        background: url(../gfx/arrow-prev.svg) center center no-repeat;
       }
     }
     li.flex-nav-next {
-      right: 20px;
+      right: 40px;
 
-      a:before {
-        display: block;
-        content: "\e080";
-        margin: 0;
-        padding: 0;
+      a {
+        background: url(../gfx/arrow-next.svg) center center no-repeat;
       }
     }
   }
   // Item navigation.
   .flex-control-nav {
     position: absolute;
-    bottom: 20px;
+    bottom: 32px;
     left: 0;
     display: block;
     margin: 0;
@@ -87,9 +88,14 @@
     list-style: none;
     z-index: 2;
 
+
+    @media (max-width: $screen-xs-max) {
+      bottom: 25px;
+    }
+
     li {
       display: inline-block;
-      margin: 0 3px;
+      margin: 0 5px;
       padding: 0;
       font-size: 0;
       vertical-align: top;
@@ -103,15 +109,15 @@
         text-align: left;
         font-size: 0;
         text-indent: -99999px;
-        background: none;
-        border: 2px solid #fff;
+        background: #fff;
+        border: none;
         border-radius: 50%;
         outline: none;
         cursor: pointer;
 
-        &:hover,
+        &:hover, &:focus,
         &.flex-active {
-          background: #fff;
+          background: $c-primary;
         }
       }
     }
@@ -133,7 +139,7 @@
 }
 .homepage-carousel-slide__content-wrapper {
   position: relative;
-  bottom: 0;
+  bottom: 18%;
   left: 0;
   width: 100%;
   text-align: center;
@@ -142,7 +148,7 @@
 
   @media (min-width: $screen-xs-min) {
     position: absolute;
-    bottom: 60px;
+    bottom: 25%;
     left: 0;
     background: none;
   }
@@ -157,35 +163,67 @@
   }
 }
 .homepage-carousel-slide__title {
-  h2 {
-    margin: 0 0 10px 0;
+  span {
+    display: inline-block;
+    position: relative;
+    margin: 0;
     padding: 0;
-    font-size: 30px;
-    line-height: 1.2;
+    font-family: $f-secondary-alternate;
+    font-size: 65px;
+    line-height: 1;
     color: #fff;
     text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.6);
 
-    @media (min-width: $screen-xs-min) {
-      font-size: 39px;
-      text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+    @media (max-width: $screen-md-max) {
+      font-size: 55px;
     }
-    @media (min-width: $screen-sm-min) {
-      font-size: 45px;
+    @media (max-width: $screen-sm-max) {
+      font-size: 35px;
+    }
+
+    &:before, &:after {
+      display: inline-block;
+      position: relative;
+      top: 25px;
+      vertical-align: top;
+      width: 79px;
+      height: 8px;
+      background-size: 79px 8px;
+      content: '';
+
+      @media (max-width: $screen-sm-max) {
+        display: none;
+      }
+    }
+
+    &:before {
+      left: -10px;
+      background: url(../gfx/rich-media-title-left.svg) center center no-repeat;
+    }
+
+    &:after {
+      right: -10px;
+      background: url(../gfx/rich-media-title-right.svg) center center no-repeat;
     }
   }
 }
+
 .homepage-carousel-slide__body {
-  margin: 0 0 17px 0;
+  margin: -10px 0 20px 0;
   padding: 0;
-  font-size: 16px;
-  line-height: 1.3;
+  font-family: $f-secondary;
+  font-size: 112px;
+  font-weight: bold;
+  line-height: 1;
   color: #fff;
   text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.8);
 
-  @media (min-width: $screen-xs-min) {
-    font-size: 18px;
-    line-height: 1.4;
-    text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.8);
+  @media (max-width: $screen-md-max) {
+    margin: 0 0 20px 0;
+    font-size: 95px;
+  }
+  @media (max-width: $screen-sm-max) {
+    font-size: 60px;
   }
 }
 .homepage-carousel-slide__link-wrapper {
