Styles homepage Flat Rate Shipping cta.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
@@ -50,7 +50,15 @@
     display: inline-block;
 
     a {
+      position: relative;
       color: #fff;
+
+      &:after {
+        position: relative;
+        display: inline-block;
+        margin-left: 3px;
+        content:">";
+      }
 
       &:hover, &:focus {
         color: $c-primary;
