--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
@@ -1,4 +1,11 @@
 /**
+ * Homepage general.
+ */
+.path-frontpage .site-content {
+  padding: 0;
+}
+
+/**
  * Homepage carousel slider.
  */
 .view-homepage-carousel {
