--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
@@ -233,6 +233,9 @@
     font-size: 60px;
   }
 }
-.homepage-carousel-slide__link-wrapper {
-  display: block;
+.homepage-carousel-slide__link {
+  .btn-secondary {
+    border: 2px solid #fff;
+    font-size: 20px;
+  }
 }
