--- a/web/themes/custom/commerce_2_demo/templates/block/block--type--3-ctas.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/block/block--type--3-ctas.html.twig
@@ -30,7 +30,7 @@
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
-    bundle ? 'block-type-' ~ bundle|clean_class,
+    'block-type-3-ctas',
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
