--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_homepage.scss
@@ -235,6 +235,8 @@
 }
 .homepage-carousel-slide__link {
   .btn-secondary {
+    height: 50px;
+    padding: 9px 25px;
     border: 2px solid #fff;
     font-size: 20px;
   }
