Styles product teaser and featured product blocks.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
@@ -1,4 +1,17 @@
 /**
+ * Block general.
+ */
+.block-views {
+  h2 {
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.08em;
+    margin-bottom: 12px;
+  }
+}
+
+/**
  * Basic Promotion block.
  */
 .block-type-basic-promotion {
