--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -17,6 +17,7 @@
 @import 'site_footer';
 @import 'pages/homepage';
 @import 'pages/blog';
+@import 'pages/product';
 
 // Live CSS.
 @import 'live_css';
