--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -21,22 +21,24 @@
 #}
 {% if view_mode == 'teaser' %}
 
-  {# Product Teaser #}
-  <article{{ attributes }} class="product product--teaser">
-    {% if product_image_thumb_url %}
-      <img src="{{ product_image_thumb_url }}" alt="{{ product_entity.title.value }}" />
-    {% else %}
-      <img src="{{ base_path ~ directory }}/gfx/logo-icon.svg" alt="{{ product_entity.title.value }}" />
-    {% endif %}
+  {# Product teaser. #}
+  <a href="{{ product_url }}" class="product product--teaser" aria-label="{{ product_entity.title.value }}">
+    <div class="product--thumbnail">
+      {% if product_image_thumb_url %}
+        <img src="{{ product_image_thumb_url }}" alt="{{ product_entity.title.value }}" />
+      {% else %}
+        <img src="{{ base_path ~ directory }}/gfx/logo-icon.svg" class="no-product-thumbnail" alt="{{ product_entity.title.value }}" />
+      {% endif %}
+    </div>
 
     {{ product.variation_price }}
     {{ product.title }}
     {{ product.field_brand }}
-  </article>
+  </a>
 
 {% else %}
 
-  {# Product Teaser #}
+  {# Product full page. #}
   <article{{ attributes }} class="product product--full">
     {{- product|without('variation_attributes') -}}
   </article>
