Updates newsletter signup form style class.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
@@ -346,7 +346,7 @@
   }
 }
 
-form.webform-submission-newsletter-sing-up-node-1-form {
+form.newsletter-signup-form {
   display: inline-block;
   vertical-align: top;
 
