--- a/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/html.html.twig
@@ -51,6 +51,8 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    {# SharThis #}
+    <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=591c6fb6c3c43c0017f5dfe0&product=inline-share-buttons"></script>
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     <div id="mobile-overlay"></div>
