Updates sidebar styles.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
@@ -17,6 +17,10 @@
     height: auto;
   }
 
+  > .container > .equal-height {
+    display: flex;
+  }
+
   .region-above-content {
     margin-bottom: 15px;
   }
