--- a/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_blocks.scss
@@ -1,13 +1,26 @@
 /**
  * Block general.
  */
-.block-views {
+.block {
   h2 {
+    margin-top: 30px;
+    margin-bottom: 12px;
     font-size: 16px;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.08em;
-    margin-bottom: 12px;
+  }
+}
+
+/**
+ * Sidebar block general.
+ */
+.site-sidebar {
+  .block {
+    h2 {
+      margin-top: 0;
+      margin-bottom: 8px;
+    }
   }
 }
 
@@ -401,6 +414,52 @@ form.newsletter-signup-form {
       &:hover, &:focus {
         background-color: $c-primary;
         border-color: $c-primary;
+      }
+    }
+  }
+}
+
+/**
+ * Side column facets.
+ */
+.block-facets {
+  padding-bottom: 5px;
+
+  ul {
+    padding: 0;
+    list-style: none;
+
+    li {
+      position: relative;
+
+      .facets-checkbox {
+        position: absolute;
+        top: 1px;
+        left: 0;
+        height: 17px;
+        width: 17px;
+      }
+
+      label {
+        margin-left: 24px;
+        font-size: 14px;
+        font-weight: normal;
+      }
+
+      &.facet-item--expanded {
+        padding: 10px 10px 5px 15px;
+        margin: 5px -10px 5px -15px;
+        background: #f7f7f7;
+
+        > .facets-checkbox {
+          top: 5px;
+          left: 15px;
+        }
+
+        .facet-item--expanded {
+          margin: -5px 0 0 -5px;
+          padding: 5px 0 0 15px;
+        }
       }
     }
   }
