--- a/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_site_header.scss
@@ -29,6 +29,7 @@
 
     .field--name-field-icon {
       padding-right: 2px;
+      margin-top: -3px;
 
       img {
         height: 18px;
@@ -49,6 +50,7 @@
 
     .field--name-field-promo-link {
       margin: 0;
+      font-size: 14px;
 
       a {
         padding: 0;
