--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -18,6 +18,7 @@
 @import 'pages/homepage';
 @import 'pages/blog';
 @import 'pages/product';
+@import 'pages/checkout';
 
 // Live CSS.
 @import 'live_css';
